<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dalai.llama</groupId>
  <artifactId>dalai-llama-backend</artifactId>
  <version>0.1.0</version>
  <packaging>pom</packaging>
  <name>dalai-llama-backend</name>
  <description>Multi-module Spring Boot backend (auth, pbx-core, prediction-service)</description>
  <!-- ✅ Spring Boot parent here -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.4</version>
    <relativePath/> <!-- so it pulls from Maven Central -->
  </parent>

  <modules>
    <module>pbx-core</module>
    <module>prediction-service</module>
      <module>agent-service</module>
    <module>billing-service</module>


    <module>blob-manager</module>
      <module>media-server</module>
      <module>tenant-service</module>
      <module>product-service</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <spring.boot.version>3.3.2</spring.boot.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <spring-cloud.version>2023.0.0</spring-cloud.version>
    <kotlin.version>1.9.21</kotlin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
